package baseline;

/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Jeanne Moore
 */

public class ReadToDoList {
    //  ToDo - Create a method: void ReadToDoList(String fileName, ObservableList<String> todos, ObservableList<String> complete)
    //      if no file is found at the specified fileName,
    //          print: the file you specified is incorrect
    //          return new ObservableList<String>() which is empty
    //      method calls a buffered reader to read a ToDoList text file
    //      each line of the text file is made up of a ToDoName, a ToDoDate, and a ToDoDesc,
    //      separated by spaces.
    //      the buffered reader reads each line to a list of Strings
    //      then,

}
