package baseline;

/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Jeanne Moore
 */

public class SortToDoByDate {
    //  ToDo - Create method: void sortToDoByDate(ObservableList<String> list)
    //      sortToDoByDate sorts an observable list by the date
    //      by way of selection sort
    //      enter a for loop (int i = 0; i < list.size(); i++)
    //          ToDoClass first = list.get(i);
    //          enter a nested for loop (int j = i; j < list.size(); j++)
    //              if the year of current first is greater than the year of the item at j,
    //                  swap the two
    //              else if the year of current first equals the year of the item at j,
    //                  move to look at month
    //                  if the month of the current first is greater,
    //                      swap the two
    //                  else if the months are equal,
    //                      move to look at day
    //                      if the day of the current is greater,
    //                          swap the two
    //              the result is the list is sorted via selection sort
}
