package baseline;

/*
 *  UCF COP3330 Fall 2021 Application Assignment 1 Solution
 *  Copyright 2021 Jeanne Moore
 */

public class WriteToDoList {
    //  ToDo - Create a method: void WriteToDoList(String fileName, ObservableList<String> todos, ObservableList<String> completed)
    //      method opens a new file at fileName with a buffered writer
    //      buffered writer prints to list
    //      print: "current"
    //      open for loop (int i = 0; i < todos.size(); i++)
    //          print: toDoName toDoDate toDoDesc  for all elements in todos list
    //      print: "complete"
    //      open for loop (int i = 0; i < completed.size(); i++)
    //      print: toDoName toDoDate toDoDesc  for all elements in completed list
    //      close the buffered writer
}
